修复一些对接中的问题
