# backend/src/main/java/com/lemongo97/iptv/iptvmanager/entity/ChannelGroup.java
@@ -1,17 +1,23 @@
 package com.lemongo97.iptv.iptvmanager.entity;
 
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
 import java.time.LocalDateTime;
 
 /**
  * 频道组
  */
-public record ChannelGroup(
-        Long id,
-        String name,
-        Integer sortOrder,
-        String description,
-        LocalDateTime createdAt,
-        LocalDateTime updatedAt,
-        Boolean deleted
-) {
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+public class ChannelGroup {
+    private Long id;
+    private String name;
+    private Integer sortOrder;
+    private String description;
+    private LocalDateTime createdAt;
+    private LocalDateTime updatedAt;
+    private Boolean deleted;
 }
