# backend/src/main/java/com/lemongo97/iptv/iptvmanager/entity/M3U8Provider.java
@@ -1,23 +1,29 @@
 package com.lemongo97.iptv.iptvmanager.entity;
 
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
 import java.time.LocalDateTime;
 import java.util.Map;
 
 /**
  * M3U8 源提供者
  */
-public record M3U8Provider(
-        Long id,
-        String name,
-        String type,
-        String url,
-        String filePath,
-        Map<String, String> headers,
-        Integer refreshRate,
-        Boolean enabled,
-        String description,
-        LocalDateTime createdAt,
-        LocalDateTime updatedAt,
-        Boolean deleted
-) {
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+public class M3U8Provider {
+    private Long id;
+    private String name;
+    private String type;
+    private String url;
+    private String filePath;
+    private Map<String, String> headers;
+    private Integer refreshRate;
+    private Boolean enabled;
+    private String description;
+    private LocalDateTime createdAt;
+    private LocalDateTime updatedAt;
+    private Boolean deleted;
 }
